# mercurio-foundation

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  LICENSE  README.md  RELEASING.md  repo-boundaries.json
.github/workflows/: ci.yml  crates-release.yml
crates/mercurio-ai/src/: lib.rs
crates/mercurio-analysis/: Cargo.toml
crates/mercurio-authoring/: Cargo.toml
crates/mercurio-cli/: Cargo.toml
crates/mercurio-cli/src/: main.rs
crates/mercurio-codegen/: Cargo.toml
crates/mercurio-codegen/src/: lib.rs  python_codegen.rs  typed_facade_codegen.rs
crates/mercurio-codegen/src/language/: concepts.rs  library_context.rs  mod.rs  profile.rs  registry.rs
crates/mercurio-codegen/tests/: typed_facade_drift.rs
crates/mercurio-core/: Cargo.toml
crates/mercurio-core/src/: ai.rs  assessment.rs  authoring.rs  behavior.rs  datalog.rs  derived.rs  diagrams.rs  expression.rs  feasibility.rs  goal.rs  graph.rs  identity.rs  ir.rs  lib.rs  library.rs  logging.rs  metamodel.rs  mutation.rs  paths.rs  plugin_registry.rs  project.rs  project_cache.rs  python_codegen.rs  query.rs  runtime.rs  session.rs  source_set.rs  views.rs
crates/mercurio-core/src/frontend/: ast.rs  kerml.rs  lowering.rs  mod.rs  pilot.rs  resolver.rs  sysml.rs  transpile.rs
crates/mercurio-core/src/language/: concepts.rs  library_context.rs  mod.rs  modules.rs  profile.rs  registry.rs
crates/mercurio-core/src/language/kerml/: mod.rs
crates/mercurio-core/src/language/sysml/: mod.rs  parser.rs
crates/mercurio-core/tests/: language_loading.rs
crates/mercurio-foundation/: Cargo.toml
crates/mercurio-foundation/src/: ai_review.rs  analysis.rs  assessment.rs  authoring.rs  behavior.rs  capability.rs  cognitive.rs  constraints.rs  datalog.rs  derived.rs  element_view.rs  feasibility.rs  goal.rs  graph.rs  identity.rs  ir.rs  lib.rs  library.rs  logging.rs  metadata.rs  metamodel.rs  model_state.rs  mpack.rs  mutation.rs  outline.rs  paths.rs  performance.rs  plugin_registry.rs  project.rs  project_cache.rs  proposal.rs  python_codegen.rs  query.rs  runtime.rs  semantic_compare.rs  semantic_legality.rs  semantic_next_actions.rs  semantic_profile.rs  semantic_target.rs  semantic_validation.rs  (+9 more)
crates/mercurio-foundation/src/dsl/: mod.rs  stdlib.rs  types.rs
crates/mercurio-foundation/src/frontend/: ast.rs  diagnostics.rs  format.rs  lexer.rs  lint.rs  mod.rs  model.rs  pilot.rs
crates/mercurio-foundation/src/language/: library_context.rs  mod.rs  profile.rs  registry.rs
crates/mercurio-foundation/src/language/kerml/: parser.rs
crates/mercurio-foundation/src/test_support/: mod.rs  toy_language.rs
crates/mercurio-foundation/tests/: authoring_workflows.rs  kerml_examples_corpus.rs  language_loading.rs
crates/mercurio-foundation/tests/fixtures/: runtime_cache_v3.hex
crates/mercurio-kerml/: Cargo.toml
crates/mercurio-kir/: Cargo.toml
crates/mercurio-kir/src/: binary.rs  lib.rs
crates/mercurio-language-contracts/: Cargo.toml
crates/mercurio-language-contracts/src/: ast.rs  diagnostics.rs  editor.rs  expression.rs  lexer.rs  lib.rs  project.rs  reports.rs  service.rs  workbench.rs
crates/mercurio-language-frontend/: Cargo.toml
crates/mercurio-model/: Cargo.toml
crates/mercurio-python/: Cargo.toml
crates/mercurio-query-dsl/: Cargo.toml
crates/mercurio-query-dsl/src/: lib.rs  query.rs
crates/mercurio-query-dsl/src/dsl/: mod.rs  types.rs
crates/mercurio-runtime/: Cargo.toml
crates/mercurio-runtime/src/: behavior.rs  constraints.rs  datalog.rs  lib.rs  runtime.rs  simulation.rs
crates/mercurio-semantic-services/: Cargo.toml
crates/mercurio-semantic-services/src/: feasibility.rs  identity.rs  lib.rs  mutation.rs  semantic_legality.rs  semantic_next_actions.rs  semantic_validation.rs  variant.rs
crates/mercurio-server/: Cargo.toml
crates/mercurio-server/src/: lib.rs  workspace.rs
crates/mercurio-server/src/api/: mod.rs
crates/mercurio-session/: Cargo.toml
crates/mercurio-session/src/: cell_runner.rs  lib.rs  session.rs  transaction.rs
crates/mercurio-simulation-core/: Cargo.toml
crates/mercurio-sysml/: Cargo.toml
crates/mercurio-tools/: Cargo.toml
crates/mercurio-views/: Cargo.toml
crates/mercurio-views/src/: element_view.rs  lib.rs  model_views.rs
crates/mercurio-wasm/: Cargo.toml  README.md
crates/mercurio-wasm/src/: lib.rs
crates/mercurio-workspace/: Cargo.toml
docs/: CORE_REPO_LAYOUT.md  FRONTEND_TO_KIR_THEORY_OF_OPERATION.md  PEER_REPOSITORY_LAYOUT.md  README.md  REPO_BOUNDARY_AUDIT.md  WINDOWS_INSTALLER_PLAN.md  crates.md  examples.md  kir.md  language-services.md  performance.md  philosophy.md  sample-language.md
docs/development/: ARCHITECTURE_MODEL.md  COMPILE_PERFORMANCE_BENCHMARK.md  DATALOG_REASONING_ENGINE_PLAN.md  DERIVED_FEATURE_BURNDOWN.md  DEVELOPMENT_ROADMAP.md  DIAGRAM_IMPLEMENTATION_PLAN.md  DOCS_CORPUS_REVIEW.md  FRONTEND_TO_KIR_THEORY_OF_OPERATION.md  KERML_SUPPORT_PLAN.md  KIR_METAMODEL_AUTHORITY_PLAN.md  KIR_SCHEMA.json  KIR_SCHEMA_ROADMAP.md  KIR_SPEC.md  L2_PARSER_PLAN.md  LANGUAGE_MODULE_ARCHITECTURE.md  MAINTAINER_TOOLS.md  PILOT_LOWERING_EVIDENCE.md  PLUGIN_ARCHITECTURE.md  PROJECT_DESCRIPTOR_AND_MOUNT_PLAN.md  PROPOSAL_DRAFT_LIFECYCLE.md  PYTHON_FRONTEND_PLAN.md  README.md  REPO_SPLIT_IMPLEMENTATION.md  SEMANTIC_ARTIFACT_KEYS.md  SEMANTIC_CAPABILITY_ARCHITECTURE_PLAN.md  SERVER_IMPLEMENTATION_PLAN.md  SERVER_WORKSPACE_PLAN.md  SIMULATION_ARCHITECTURE.md  SIMULATION_IMPLEMENTATION_PLAN.md  STDLIB_RELEASE_PIPELINE.md  SYSML_EXPRESSION_IMPLEMENTATION_PLAN.md  VERIFICATION_PIPELINE_ARCHITECTURE.md  VIEWS_ARCHITECTURE.md  WINDOWS_INSTALLER_PLAN.md
docs/user/: CLI.md  KIR.md  KPAR.md  PROJECTS.md  QUERY_EVALUATE.md  README.md  TROUBLESHOOTING.md
examples/: run_state_machine.py
mappings/l2/: pilot_constructs.seed.json
python/: pyproject.toml
python/examples/: basic_workspace.py
resources/: README.md
resources/foundation/: core.rulepack.json  empty.kir.json  representative.kir.json
resources/kernel/: kerml-kernel.kir.json
test_files/: README.md
tools/: install-mercurio.ps1
(+73 files in other folders)
