[workspace]
members = [
    "crates/mercurio-kir",
    "crates/mercurio-language-contracts",
    "crates/mercurio-model",
    "crates/mercurio-runtime",
    "crates/mercurio-foundation",
    "crates/mercurio-simulation-core",
    "crates/mercurio-views",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"

[workspace.dependencies]
reqwest = { version = "0.13", features = ["blocking", "json"] }
base64 = "0.22"
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0"
time = { version = "0.3", features = ["formatting"] }
zip = { version = "0.6", default-features = false, features = ["deflate"] }
