[workspace]
members = [
    "crates/mercurio-kir",
    "crates/mercurio-language-contracts",
    "crates/mercurio-model",
    "crates/mercurio-runtime",
    "crates/mercurio-authoring",
    "crates/mercurio-semantic-services",
    "crates/mercurio-workspace",
    "crates/mercurio-analysis",
    "crates/mercurio-query-dsl",
    "crates/mercurio-codegen",
    "crates/mercurio-session",
    "crates/mercurio-core",
    "crates/mercurio-simulation-core",
    "crates/mercurio-views",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "KerML-aligned semantic modeling substrate and KIR runtime for Mercurio."
repository = "https://github.com/mercurio-labs/mercurio-foundation"
readme = "README.md"
rust-version = "1.85"

[workspace.dependencies]
reqwest = { version = "0.13", features = ["blocking", "json"] }
base64 = "0.22"
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0"
rhai = { version = "1", default-features = false, features = ["std", "sync"] }
time = { version = "0.3", features = ["formatting"] }
zip = { version = "0.6", default-features = false, features = ["deflate"] }
