[package]
name = "mercurio-codegen"
version.workspace = true
edition.workspace = true
license.workspace = true
description.workspace = true
repository.workspace = true
readme.workspace = true
rust-version.workspace = true

[dependencies]
mercurio-kir = { path = "../mercurio-kir", version = "0.1.0" }
mercurio-language-contracts = { path = "../mercurio-language-contracts", version = "0.1.0" }
mercurio-workspace = { path = "../mercurio-workspace", version = "0.1.0" }
serde.workspace = true
serde_json.workspace = true
