[package]
name = "mercurio-core"
version.workspace = true
edition.workspace = true
license.workspace = true


[dependencies]
mercurio-kir = { path = "../mercurio-kir" }
mercurio-language-contracts = { path = "../mercurio-language-contracts" }
serde.workspace = true
serde_json.workspace = true
zip.workspace = true
