[package]
name = "mercurio-foundation"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "mercurio_core"

[dependencies]
mercurio-kir = { path = "../mercurio-kir" }
mercurio-language-contracts = { path = "../mercurio-language-contracts" }
serde.workspace = true
serde_json.workspace = true
zip.workspace = true
