[package]
name = "mercurio-foundation"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Public Rust facade for Mercurio's language-neutral semantic modeling foundation."
repository.workspace = true
readme.workspace = true
rust-version.workspace = true
keywords = ["modeling", "semantic", "sysml", "simulation"]
categories = ["data-structures", "development-tools"]

[dependencies]
mercurio-core = { path = "../mercurio-core", version = "0.85.0" }
