[package]
name = "mercurio-server"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
axum.workspace = true
base64.workspace = true
http-body-util.workspace = true
mercurio-core = { path = "../mercurio-core" }
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
time.workspace = true
tokio.workspace = true
tower.workspace = true
zip.workspace = true
