[package]
name = "mercurio-views"
version.workspace = true
edition.workspace = true
license.workspace = true
description.workspace = true
repository.workspace = true

[dependencies]
mercurio-core = { package = "mercurio-foundation", path = "../mercurio-foundation", version = "0.1.0" }
serde.workspace = true
serde_json.workspace = true
