[package]
name = "mercurio-views"
version.workspace = true
edition.workspace = true
license.workspace = true
description.workspace = true
repository.workspace = true
readme.workspace = true
rust-version.workspace = true

[dependencies]
mercurio-kir = { path = "../mercurio-kir", version = "0.1.0" }
mercurio-model = { path = "../mercurio-model", version = "0.1.0" }
mercurio-runtime = { path = "../mercurio-runtime", version = "0.1.0" }
serde.workspace = true
serde_json.workspace = true
